--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
         </nav>
     </div>
     <div class="body">
-     <h2 class="photo">Photos</h2>
+     <h2 class="photo">Photo</h2>
       <p class="photo1"><img src="images/junaid1.jpg"style="border: 2px solid black"; width="400px"></p>
       <p class="photo2"><img src="images/junaid2.jpg"width="400px"style="border: 2px solid black";></p>
     </div>
