--- a/index.htm
+++ b/index.htm
@@ -20,9 +20,25 @@
         </nav>
     </div>
     <div class="body">
-     <h2 class="photo">Photo</h2>
-      <p class="photo1"><img src="images/junaid1.jpg"style="border: 2px solid black"; width="400px"></p>
-      <p class="photo2"><img src="images/junaid2.jpg"width="400px"style="border: 2px solid black";></p>
+     <h2 class="photo">Photos</h2>
+      <p class="photo1"><img class="img1" src="images/junaid1.jpg"style="border: 2px solid black"; width="400px"></p>
+      <p class="photo2"><img class="img" src="images/junaid2.jpg"width="400px"style="border: 2px solid black";></p>
+      <p class="photo3"><img src="images/photo3.jpg" alt=""width="400px"style="border:2px solid black" class="img2"></p>
+      <p class="photo4"><img src="images/photo4.jpg" alt=""width="400px"style="border:2px solid black" class="img3"></p>
+      <p class="photo5"><img src="images/photo5.jpg"width="400px"style="border:2px solid black" alt="" class="img4"></p>
+      <p class="photo6"><img src="images/photo6.jpg"width="400px"style="border:2px solid black" alt="" class="img4"></p>
+      <p class="photo7"><img src="images/photo7.jpg"width="400px"height="300px" style="border:2px solid black" alt="" class="img5"></p>
+      <p class="photo8"><img src="images/photo8.jpg"width="400px"style="border:2px solid black"height="450px" alt="" class="img6"></p>
+      <p class="photo9"><img src="images/photo9.jpg"width="400px"height="300px" style="border:2px solid black" alt="" class="img7"></p>
+      <p class="photo10"><img src="images/photo10.jpg"width="400px"style="border:2px solid black"height="300px" alt="" class="img8"></p>
+      <p class="photo11"><img src="images/photo13.jpg"width="400px"style="border:2px solid black"height="300px" alt="" class="img9"></p>
     </div>
+    <footer>
+        <div class="foot">
+            <p class="i1">Copyright © 2015-2022, All Rights Reserved, MD AFIF JUNAID</p>
+            <p class="i2">Developed By - {MA}junaid</p>
+            <p class="i3"><img src="images/junaid3.jpg"width="50px" alt=""></p>
+        </div>
+    </footer>
 </body>
 </html>
